[gd_scene load_steps=6 format=3 uid="uid://bwgv3e4g8tjpb"]

[ext_resource type="Script" uid="uid://dkjeeute7d35b" path="res://scripts/actors/player/player.gd" id="1_wmv1v"]
[ext_resource type="AudioStream" uid="uid://12er34jykeur" path="res://assets/sounds/jump.wav" id="2_l17oj"]
[ext_resource type="AudioStream" uid="uid://bs2by5kgyrplr" path="res://assets/sounds/game-over.wav" id="3_oj104"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l17oj"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_oj104"]
radius = 6.0

[node name="Player" type="CharacterBody2D"]
collision_mask = 2
collision_priority = 2.0
script = ExtResource("1_wmv1v")

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="JumpAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_l17oj")

[node name="GameOverAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_oj104")

[node name="WorldCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_l17oj")

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(0, -1)
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_oj104")
debug_color = Color(0.86453, 0.339727, 0.297452, 0.42)

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
